# vscode-debug-code

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  package.nls.json  pnpm-lock.yaml  tsconfig.json
examples/: commands.txt
examples/go-project/: go.mod  go_test.go  main.go
examples/go_dir/: a_test.go  run.go
examples/jests/: a.test.ts  b.test.js
examples/node-project/: main.js  main.ts  test.js  test.ts
examples/node_dir/: run_js.js  run_ts.ts
examples/python-project/: main.py  pyproject.toml  requirements.txt  server.py  tests.py
examples/python-project/a/: main.py
examples/python_dir/: run.py  test_pytest.py
examples/python_dir/module_a/: run.py
examples/rust-project/: Cargo.toml
examples/rust-project/rust-sub-project/: Cargo.toml
examples/rust-project/src/: main.rs
examples/vite-project/: package.json  pnpm-lock.yaml  vite.config.js  vite.config.js.map
examples/vite-project/src/: main.js  main.js.map
resources/: jest.config.js
src/: extension.ts
src/config/: index.ts
src/core/: commands.ts  editorListener.ts  extension.ts
src/core/commands/: debugFile.ts  debugHere.ts  debugLast.ts  index.ts
src/globals/: index.ts
src/types/: index.ts
src/utils/: api.ts  index.ts  locale.ts  node.ts  output.ts
